Weg met fxpackager. package via gluon jdk.packager voor jdk11
git-svn-id: https://svn.science.uu.nl/repos/sci.velth101.projects/MicroServer@1129 15dc1663-c6ff-0310-8f09-83f172d7987a