@@ -22,10 +22,7 @@
 			</resource>
 		</resources>
 		<plugins>
-
-
-
-<plugin>
+     <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <version>3.0.0</version>
@@ -167,82 +164,7 @@
 			</properties>
 			<build>
 				<plugins>
-	<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-antrun-plugin</artifactId>
-		<version>1.8</version>
-		<executions>
-			<execution>
-				<phase>none</phase>
-				<configuration>
-					<target
-						xmlns:fx="javafx:com.sun.javafx.tools.ant">
-						<echo message="JAVA_HOME = ${java.home}" />
-						<taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
-							uri="javafx:com.sun.javafx.tools.ant"
-							classpath="${java.home}/../lib/ant-javafx.jar" />
-						<fx:application id="fi.microserver"
-							name="Numworx-author" 
-							mainClass="fi.microserver.Numworx" 
-							version="${project.version}" 
-							toolkit="swing" />
-						<fx:resources id="appRes">
-						    <fx:fileset dir="target/dependency" includes="*.jar"/>
-						    <fx:fileset dir="target" includes='${project.build.finalName}.jar' />
-						</fx:resources>
-						<fx:deploy width="800" height="600"
-					        outdir="target/deploy" embedJNLP="true"
-					        outfile="Numworx-author"
-							nativeBundles='dmg'
-							signBundle='false'
-						>
-							<fx:platform j2se="8.0" >
-								<fx:jvmarg value="-Xmx1024m" />
-							</fx:platform>
-					        <fx:application refId="fi.microserver"/>					 
-					        <fx:resources refid="appRes"/>						 
-					        <fx:info 
-					        	title="Numworx-author"
-					          	vendor="Numworx"
-					          	description="Start Numworx-author"
-					         >
-						         <fx:association extension='dwo' mimetype="application/x-numworx-dwo-configuration" />
-						         <fx:icon href='package/macosx/Numworx-author.icns' />
-					         </fx:info>
-<!-- 					         <fx:bundleArgument arg='icon' value='package/macosx/DWO-docent-volume.icns' /> -->
-					      </fx:deploy>
-					</target>
-				</configuration>
-				<goals>
-					<goal>run</goal>
-				</goals>
-			</execution>
-		</executions>
-	</plugin>
-   <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <id>attach-artifacts</id>
-            <phase>none</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>target/deploy/bundles/Numworx-Author-${project.version}.dmg</file>
-                  <type>dmg</type>
-                  <classifier>installer</classifier>
-                </artifact>
-              </artifacts>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>	
-     </plugins>
+     			</plugins>
 			</build>
 		</profile>
 		<profile>
@@ -260,96 +182,9 @@
 			</properties>
 			<build>
 				<plugins>
-	<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-antrun-plugin</artifactId>
-		<version>1.8</version>
-		<dependencies>
-			<dependency>
-				<groupId>javafx</groupId>
-				<artifactId>ant-javafx.jar</artifactId>
-				<version>9.0.4</version>
-				<systemPath>${java.home}/lib/ant-javafx.jar</systemPath>
-				<scope>system</scope>
-			</dependency>
-		</dependencies>
-		<executions>
-			<execution>
-				<phase>verify</phase>
-				<configuration>
-					<target
-						xmlns:fx="javafx:com.sun.javafx.tools.ant">
-						<echo message="JAVA_HOME = ${java.home}" />
-						<taskdef resource="com/sun/javafx/tools/ant/antlib.xml"
-							uri="javafx:com.sun.javafx.tools.ant"
-						/>
-						<fx:application id="fi.microserver"
-							name="Numworx-Author" 
-							mainClass="fi.microserver.Numworx" 
-							version="${project.version}" 
-							toolkit="swing" />
-						<fx:resources id="appRes">
-						    <fx:fileset dir="target/dependency" includes="*.jar"/>
-						    <fx:fileset dir="target/dependency" includes="*.dwo"/>
-						    <fx:fileset dir="target" includes='${project.build.finalName}.jar' />
-						</fx:resources>
-						<fx:deploy width="800" height="600"
-					        outdir="target/deploy" embedJNLP="true"
-					        outfile="Numworx-Author"
-							nativeBundles='exe'
-							signBundle='false'
-						>
-							<fx:platform j2se="9.0" >
-								<fx:jvmarg value="-Xmx1024m --add-exports=java.desktop/sun.awt.www.content.image=ALL-UNNAMED --add-modules java.activation,java.desktop" />
-							</fx:platform>
-					        <fx:application refId="fi.microserver"/>					 
-					        <fx:resources refid="appRes"/>						 
-					        <fx:info 
-					        	title="Numworx-Author"
-					          	vendor="Numworx"
-					          	description="Start Numworx-Author"
-					         >
-						         <fx:association extension='dwo' mimetype="application/x-numworx-dwo-configuration"/>
-						         <fx:icon href='package/windows/DWO-docent.ico' />
-					         </fx:info>
-<!-- 					         <fx:bundleArgument arg='icon' value='package/macosx/DWO-docent-volume.icns' /> -->
-					      </fx:deploy>
-					</target>
-				</configuration>
-				<goals>
-					<goal>run</goal>
-				</goals>
-			</execution>
-		</executions>
-	</plugin>
-   <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <id>attach-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>target/deploy/Numworx-Author-${project.version}.exe</file>
-                  <type>exe</type>
-                  <classifier>installer</classifier>
-                </artifact>
-              </artifacts>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>	
-     </plugins>
-			</build>
-		
+     			</plugins>
+			</build>	
 		</profile>
-	
 		<profile>
 			<id>assemble</id>
 			<build>
